# datafusion-csharp

./: .editorconfig  .gitignore  Directory.Build.props  README.md  datafusion-csharp.slnx
.github/workflows/: build.yml  release.yml
examples/: Directory.Build.props
examples/Apache.DataFusion.Sample.Aggregate/: Program.cs
examples/Apache.DataFusion.Sample.ClickHouse/: Apache.DataFusion.Sample.ClickHouse.csproj  Program.cs
examples/Apache.DataFusion.Sample.DataFrame/: Program.cs
examples/Apache.DataFusion.Sample.Excel/: Apache.DataFusion.Sample.Excel.csproj  Program.cs
examples/Apache.DataFusion.Sample.FederatedQuery/: Apache.DataFusion.Sample.FederatedQuery.csproj  Program.cs
examples/Apache.DataFusion.Sample.Join/: Program.cs
examples/Apache.DataFusion.Sample.MongoDB/: Apache.DataFusion.Sample.MongoDB.csproj  Program.cs
examples/Apache.DataFusion.Sample.MySql/: Apache.DataFusion.Sample.MySql.csproj  Program.cs
examples/Apache.DataFusion.Sample.ParquetBenchmark/: Apache.DataFusion.Sample.ParquetBenchmark.csproj  Program.cs
examples/Apache.DataFusion.Sample.PostgreSql/: Apache.DataFusion.Sample.PostgreSql.csproj  Program.cs
examples/Apache.DataFusion.Sample.ScalarUdf/: Program.cs
examples/Apache.DataFusion.Sample.SessionConfig/: Program.cs
examples/Apache.DataFusion.Sample.Sql/: Program.cs
examples/Apache.DataFusion.Sample.Sqlite/: Apache.DataFusion.Sample.Sqlite.csproj  Program.cs
examples/Apache.DataFusion.Sample.Streaming/: Program.cs
examples/Apache.DataFusion.Sample.TableProvider/: Program.cs
examples/DataFusion.Sample.SessionConfig/: Program.cs
examples/DataFusion.Sample.SetOperations/: Program.cs
examples/DataFusion.Sample.Sql/: DataFusion.Sample.Sql.csproj
native/: Cargo.toml  build.rs
native/src/: arrow.rs  avro.rs  cache_manager.rs  callback_table.rs  cancellation.rs  clickhouse.rs  csv.rs  excel.rs  json.rs  lib.rs  memory.rs  mongodb.rs  mysql.rs  object_store.rs  parquet.rs  postgres.rs  proto.rs  runtime_metrics.rs  schema.rs  sqlite.rs  table_provider.rs  udf.rs
nupkg/: Apache.DataFusion.0.1.1.nupkg  Apache.DataFusion.0.1.1.snupkg
proto/: arrow_read_options.proto  avro_read_options.proto  cache_manager_options.proto  csv_read_options.proto  csv_write_options.proto  excel_read_options.proto  file_compression_type.proto  json_read_options.proto  json_write_options.proto  object_store_options.proto  parquet_read_options.proto  session_options.proto
python/examples/: api_join_demo.py  sqlite_demo.py
scripts/: generate_parquet.py
src/Apache.DataFusion.TableProviders.ClickHouse/: Apache.DataFusion.TableProviders.ClickHouse.csproj  BooleanColumnAppender.cs  ClickHouseArrowArrayStream.cs  ClickHouseDatabaseOptions.cs  ClickHouseStreamingTableProvider.cs  ClickHouseTableOptions.cs  ColumnAppender.cs  ColumnKind.cs  ColumnPlan.cs  DoubleColumnAppender.cs  FloatColumnAppender.cs  Int32ColumnAppender.cs  Int64ColumnAppender.cs  SessionContextExtensions.cs  StringColumnAppender.cs
src/Apache.DataFusion.TableProviders.MongoDB/: Apache.DataFusion.TableProviders.MongoDB.csproj  MongoDbArrowArrayStream.cs  MongoDbColumnAppender.cs  MongoDbColumnKind.cs  MongoDbColumnPlan.cs  MongoDbDatabaseOptions.cs  MongoDbQuery.cs  MongoDbQueryBuilder.cs  MongoDbStreamingTableProvider.cs  MongoDbTableOptions.cs  SessionContextExtensions.cs
src/Apache.DataFusion.TableProviders.MySql/: Apache.DataFusion.TableProviders.MySql.csproj  BooleanColumnAppender.cs  ColumnAppender.cs  ColumnKind.cs  ColumnPlan.cs  DoubleColumnAppender.cs  FloatColumnAppender.cs  Int32ColumnAppender.cs  Int64ColumnAppender.cs  MySqlArrowArrayStream.cs  MySqlDatabaseOptions.cs  MySqlDialect.cs  MySqlStreamingTableProvider.cs  MySqlTableOptions.cs  SessionContextExtensions.cs  StringColumnAppender.cs
src/Apache.DataFusion.TableProviders.PostgreSql/: Apache.DataFusion.TableProviders.PostgreSql.csproj  BooleanColumnAppender.cs  ColumnAppender.cs  ColumnKind.cs  ColumnPlan.cs  DoubleColumnAppender.cs  FloatColumnAppender.cs  Int32ColumnAppender.cs  Int64ColumnAppender.cs  PostgreSqlArrowArrayStream.cs  PostgreSqlDatabaseOptions.cs  PostgreSqlDialect.cs  PostgreSqlStreamingTableProvider.cs  (+3 more)
(+128 files in other folders)
