[package]
name = "datafusion-csharp-native"
version = "0.1.0"
edition = "2021"

[lib]
# Keep the artifact named `datafusion_csharp_native` (the loader, the per-RID
# packaging projects and release.yml all reference this exact file name). Cargo
# would derive the same from the hyphenated package name, but pin it explicitly
# so the output never depends on that normalization.
name = "datafusion_csharp_native"
crate-type = ["cdylib", "rlib"]

[features]
default = ["excel", "postgres", "mysql", "mongodb", "clickhouse", "sqlite"]
excel = ["dep:calamine"]
object-store-aws = ["object_store/aws"]
object-store-gcp = ["object_store/gcp"]
object-store-http = ["object_store/http"]
substrait = ["dep:datafusion-substrait"]
runtime-metrics = ["dep:tokio-metrics"]
postgres = ["dep:datafusion-table-providers", "datafusion-table-providers/postgres"]
mysql = ["dep:datafusion-table-providers", "datafusion-table-providers/mysql"]
mongodb = ["dep:datafusion-table-providers", "datafusion-table-providers/mongodb"]
clickhouse = ["dep:datafusion-table-providers", "datafusion-table-providers/clickhouse"]
sqlite = ["dep:datafusion-table-providers", "datafusion-table-providers/sqlite-bundled"]

[dependencies]
arrow = { version = "58", features = ["ffi"] }
calamine = { version = "0.26", optional = true }
datafusion = { version = "53.1.0", features = ["avro"] }
datafusion-proto = "53.1.0"
datafusion-substrait = { version = "53.1.0", optional = true }
datafusion-table-providers = { version = "0.11", default-features = false, optional = true }
futures = "0.3"
object_store = { version = "0.13", default-features = false }
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-metrics = { version = "0.5", optional = true }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

# Debug builds statically link the whole DataFusion/Arrow tree; full debuginfo dominates the
# artifact size (hundreds of MB). Line tables keep usable backtraces at a fraction of the size.
[profile.dev]
debug = "line-tables-only"

# Keep the default opt-level (3) for runtime speed; shrink the shipped binary with LTO,
# a single codegen unit, and symbol stripping (no perf cost, often a small gain).
[profile.release]
lto = true
codegen-units = 1
strip = true
